<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="skillbooting.savingfiles.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_intenal"
            android:textSize="@dimen/normalTextSize"
            android:textColor="@color/normalText"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:textColor="@color/buttonText"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/medium_margin"
            android:textSize="@dimen/buttonTextSize"
            android:layout_marginBottom="@dimen/medium_margin"
            android:layout_gravity="center"
            android:onClick="usingFile"
            android:id="@+id/btn_file"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_output"
            android:textColor="@color/buttonText"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/medium_margin"
            android:textSize="@dimen/buttonTextSize"
            android:layout_gravity="center"
            android:onClick="usingFileOutputStream"
            android:layout_marginBottom="@dimen/medium_margin"
            android:id="@+id/btn_output"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache"
            android:textColor="@color/buttonText"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/medium_margin"
            android:textSize="@dimen/normalTextSize"
            android:layout_gravity="center"
            android:onClick="usingCache"
            android:id="@+id/btn_cache"
            android:layout_marginBottom="@dimen/medium_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_external"
            android:textSize="@dimen/normalTextSize"
            android:textColor="@color/normalText"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/external"
            android:textColor="@color/buttonText"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/medium_margin"
            android:textSize="@dimen/buttonTextSize"
            android:layout_gravity="center"
            android:onClick="usingExternalStorage"
            android:layout_marginBottom="@dimen/medium_margin"
            android:id="@+id/btn_external"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query"
            android:textColor="@color/buttonText"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/medium_margin"
            android:textSize="@dimen/buttonTextSize"
            android:layout_gravity="center"
            android:onClick="querySpace"
            android:layout_marginBottom="@dimen/medium_margin"
            android:id="@+id/btn_query"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/buttonText"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/medium_margin"
            android:textSize="@dimen/buttonTextSize"
            android:layout_gravity="center"
            android:onClick="deleteMyFile"
            android:layout_marginBottom="@dimen/medium_margin"
            android:id="@+id/btn_delete"
            />

    </LinearLayout>
</RelativeLayout>
